part2/webserver/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: webserver-svc
spec:
  type: ClusterIP
  selector:
    app: webserver
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3300
